<resources>
    <string name="app_name">MyFinalYearProject</string>
    <string name="game_finder">Game Finder</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="sign_in">Sign In</string>
    <string name="game">Game</string>
    <string name="description">Description</string>
    <string name="create_game">Create Game</string>
    <string name="view_game">View Game</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="magic_text">Magic! The Gathering</string>
    <string name="game_img">gameImg</string>
    <string name="game_name">Game Name</string>
    <string name="game_desc">Game Desc</string>
    <string name="game_list">Game List</string>
    <string name="user_message">Message</string>
    <string name="gameImage">Game Image</string>
    <string name="gameImageURL">Game Image URL</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post Name</string>
    <string name="dota_2_text">Dota 2</string>
    <string name="codmw_text">Call of Duty: Modern Warfare</string>
    <string name="destiny_2_text">Destiny 2</string>
    <string name="hearthstone_text">Hearthstone</string>
    <string name="league_text">League of Legends</string>
    <string name="minecraft_text">Minecraft</string>
    <string name="overwatch_text">Overwatch</string>
    <string name="warcraft_text">World of Warcraft</string>
    <string name="postDescription">Post Description</string>
    <string name="userName">Username</string>
    <string name="userEmail">Email</string>
    <string name="userImg">UserImage</string>
    <string name="noAccount">Do not have an account?</string>
    <string name="sendBtn">Send</string>
    <string name="accountBtn">Account</string>
    <string name="account">Account</string>
    <string name="Account">accountItem</string>
    <string name="postName">Post Name</string>
    <string name="userPostName">User Post</string>
    <string name="userPostDescription">User Post Description</string>
    <string name="userPost">User Post</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <string name="passChars">******</string>
    <string name="editImg">edit_image</string>
    <string name="change_details">Change Details</string>
    <string name="editButton">Edit Button</string>
    <string name="saveProfileBtn">Save Profile</string>
    <string name="userAge">Age</string>
    <string name="userTags">Game Tags</string>
    <string name="backBtn">Back Button</string>
    <string name="haveAccount">Have an account already?</string>
    <string name="time_stamp">Timestamp</string>
    <string name="postTitle">Post Title</string>
    <string name="enter_message">Enter Message</string>
    <string name="userImage">Image</string>
    <string name="otherUserAccount">User Account</string>
    <string name="private_message">Private Message</string>
    <string name="add_friend">Add Friend</string>
    <string name="currentUserAccount">User Account</string>
    <string name="email_address">Email Address</string>
    <string name="user_image_button">changeUserImageBtn</string>
    <string name="unFriend">Remove Friend</string>
    <string name="messages">Messages</string>
    <string name="message">This is a Message</string>
    <string name="time">10:00</string>
    <string name="user_icon">User Icon</string>
    <string name="friends">Friends</string>
    <string name="friendlist">Friend List</string>
</resources>
