<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context=".EditProfilePage">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/account_circle_icon"
                    android:id="@+id/userImg"
                    android:contentDescription="@string/userImg"
                    android:clickable="true"
                    android:focusable="true" />

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName"
                    android:textSize="24sp"
                    android:padding="10dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:layout_margin="10sp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:autofillHints="@string/userName" />

                <EditText
                    android:id="@+id/editUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userEmail"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:inputType="textEmailAddress|textCapSentences"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/editNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:inputType="textPersonName|textCapSentences"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/editPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:inputType="textPassword|textCapSentences"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editAgeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userAge"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:inputType="number"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTagsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userTags"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:inputType="textLongMessage|textCapSentences"
                    android:autofillHints="" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saveProfileBtn"
                    android:id="@+id/saveEditProfile"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"/>

        </LinearLayout>
</ScrollView>