<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_shapes_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChooseLoginPage">

    <TextView
        android:id="@+id/gameFinder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:text="@string/game_finder"
        android:textSize="36sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/login"
        android:shadowColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/register" />

</LinearLayout>