<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/abstract_shapes_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".OtherUserAccountPage">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/account_circle_icon"
                    android:id="@+id/userImg"
                    android:contentDescription="@string/userImg" />

                <TextView
                    android:id="@+id/userNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:maxHeight="60dp"
                    android:hint="@string/userName"
                    android:textSize="24sp"
                    android:padding="10dp"
                    android:layout_margin="10sp"
                    android:orientation="horizontal"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg_white"
                    android:maxHeight="50dp"
                    android:hint="@string/userEmail"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg_white"
                    android:maxHeight="50dp"
                    android:hint="@string/name"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg_white"
                    android:maxHeight="50dp"
                    android:inputType="textPassword"
                    android:hint="@string/passChars"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="viewStart"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg_white"
                    android:maxHeight="50dp"
                    android:hint="@string/userAge"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="viewStart"/>

                <TextView
                    android:id="@+id/userTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg_white"
                    android:maxHeight="50dp"
                    android:hint="@string/userTags"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:textAlignment="viewStart"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/colorAccent"
                android:clickable="true"
                android:contentDescription="@string/editButton"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/pencil" />

        </LinearLayout>
</ScrollView>