<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/otherGameListViewParent">

    <TextView
        android:id="@+id/otherGamePostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/otherGamePostTime"
        android:lines="1"
        android:text="@string/postName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/otherGamePostDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otherGamePostName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/postDescription"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/otherGamePostTime"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:text="@string/time_stamp"
        android:textSize="12sp" />

</RelativeLayout>