<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/abstract_shapes_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".UserAccountPage">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/account_circle_icon"
            android:id="@+id/otherUserImg"
            android:contentDescription="@string/userImg" />

        <TextView
            android:id="@+id/otherUserNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:maxHeight="60dp"
            android:hint="@string/userName"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_margin="10sp"
            android:orientation="horizontal"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp">

            <Button
                android:id="@+id/privateMessage"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/private_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addFriend"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/add_friend"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/privateMessage"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/unFriend"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/unFriend"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/privateMessage"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/otherUserTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_white"
            android:maxHeight="50dp"
            android:hint="@string/userTags"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="viewStart"/>

    </LinearLayout>
</ScrollView>