<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:id="@+id/otherPostViewParent"
    android:orientation="horizontal"
    android:weightSum="100"
    android:gravity="center_vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/otherUserImage"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/otherUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/postName"
        android:layout_toEndOf="@id/otherUserImage"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/otherUserMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otherUserName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@id/otherUserImage"
        android:text="@string/postDescription"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/otherUserPostTime"
        android:layout_width="120dp"
        android:layout_height="15dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/time_stamp"
        android:textSize="12sp" />

</RelativeLayout>