<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/layout_bg_white"
    android:id="@+id/gameListViewParent"
    android:layout_centerVertical="true"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_margin="5dp"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:id="@+id/gamePostImage"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/gamePostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_toStartOf="@+id/gamePostTime"
        android:layout_toEndOf="@id/gamePostImage"
        android:lines="1"
        android:text="@string/postName"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gamePostDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gamePostName"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/gamePostImage"
        android:text="@string/postDescription"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/gamePostTime"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:text="@string/time_stamp"
        android:textSize="12sp" />

</RelativeLayout>