<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_margin="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="20dp"
        android:maxHeight="20dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/account_circle_icon"
        android:contentDescription="@string/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_name_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/user_name"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/user_image_other"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/message_layout_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#eef1f6"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@+id/user_image_other"
        app:layout_constraintTop_toBottomOf="@+id/user_name_other">

        <LinearLayout
            android:id="@+id/layout_container_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:maxWidth="260dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingRight="12dp"
                android:text="@string/message"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/text_timestamp_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#C0C0C0"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/message_layout_other"
        app:layout_constraintStart_toEndOf="@+id/message_layout_other" />


</androidx.constraintlayout.widget.ConstraintLayout>