<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract_shapes_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/postImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:src="@drawable/account_circle_icon" />

    <EditText
        android:id="@+id/postNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg_white"
        android:layout_below="@id/postImageView"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="text|textCapSentences"
        android:hint="@string/postName"
        android:autofillHints="@string/postName" />

    <EditText
        android:id="@+id/postDescEdit"
        android:minHeight="100dp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg_white"
        android:layout_below="@+id/postNameEdit"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="textImeMultiLine|textCapSentences"
        android:hint="@string/postDescription"
        android:autofillHints="@string/postDescription" />

    <Button
        android:id="@+id/createPostBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postDescEdit"
        android:gravity="center"

        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/create_post"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>
</RelativeLayout>